# Big-Data-Project

./: .gitignore  CLAUDE.md  CODE_PLAN.md  README.md  docker-compose.yml  eeg_producer.py  pyproject.toml
artifacts/week1/: eeg_metadata_profile.json  eeg_subset_manifest.json
artifacts/week2/: demo_fallback.jsonl  download_manifest.json
configs/: project.example.yaml
docs/: architecture.md  final-sprint-plan.md  setup-guide.md  week1-checklist.md  week1-code-explanation.md  week1-qa.md  week1-slides.md  week2-checklist.md  week2-work-packages.md
infra/docker/: docker-compose.yml
infra/k8s/: cassandra-statefulset.yaml  configmap.yaml  deploy.sh  kafka-statefulset.yaml  namespace.yaml  persistent-volumes.yaml  spark-batch-cronjob.yaml  spark-streaming-deployment.yaml  spark-streaming-job.yaml  teardown.sh  zookeeper-deployment.yaml
scripts/: build_local_subset_manifest.py  demo_dashboard.py  demo_kafka_streaming.py  download_bdsp_subset.py  download_eeg_ehr.py  end_to_end_demo.py  profile_eeg_metadata.py  replay_eeg_to_kafka.py  replay_to_kafka.py
src/brainwatch/: __init__.py
src/brainwatch/config/: settings.py
src/brainwatch/contracts/: __init__.py  events.py
tests/: test_anomaly_rules.py  test_bronze_ingest.py  test_bronze_writer.py  test_dead_letter.py  test_download_bdsp_subset.py  test_download_eeg_ehr.py  test_eeg_inventory.py  test_eeg_producer.py  test_eeg_replay.py  test_ehr_loader.py  test_ehr_normalizer.py  test_gold_layer.py  test_kafka_helpers.py  test_serving.py  test_silver_layer.py  test_speed_layer.py  test_subset_manifest.py
(+19 files in other folders)
