[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brainwatch-big-data"
version = "0.1.0"
description = "Week-1 scaffold for a Lambda-style EEG and EHR big data project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
spark = [
  "pyspark>=3.5,<4.0",
]
kafka = [
  "kafka-python>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/brainwatch"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
