[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brainwatch-big-data"
version = "0.2.0"
description = "Lambda-architecture big data system for hospital-scale EEG monitoring."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
kafka = [
  "kafka-python>=2.0",
]
spark = [
  "pyspark>=3.5,<4.0",
]
all = [
  "brainwatch-big-data[kafka,spark]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/brainwatch"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
